hphp/hack/test/typecheck/function_pointer/meth_caller.php
<?hh

class Bar {
  public function baz(): void {}

    public static function baz2(): void {}
}

function test(): void {
  Bar::baz<>;
}
